# TensorRT_Learning

./: .gitignore  Readme.md  test_version.py
01-SimpleDemo/: .gitignore  01-SimpleDemo.vcxproj  cookbookHelper.cuh
01-SimpleDemo-VS/: 01-SimpleDemo.sln  01-SimpleDemo.vcxproj  cookbookHelper.cuh  main.py
01-SimpleDemo-cmake/: CMakeLists.txt  arm.trt  cookbookHelper.cuh  main.cpp  main.py  model.plan
02-ONNX-cmake/: CMakeLists.txt  TensorRTUtils.cpp  TensorRTUtils.h  cookbookHelper.cpp  cookbookHelper.cuh  main.cpp  sampleOnnxMNIST.cpp
02-ONNX-cmake/model/: frameID-0000-bounce_ShadowRayOrigin.exr  frameID-0000-bounce_ShadowRayTarget.exr
02-TensorRT-cmake/: CMakeLists.txt  cookbookHelper.cpp
02-TensorRT-cmake/model/: TensorRT自带工具将onnx模型转化为trt模型.lnk  arm.plan  frameID-0000-bounce_InRayDirection.exr  frameID-0000-bounce_InRayOrigin.exr
03-ONNX-cmake/: TensorRTUtils.cpp  TensorRTUtils.h
tensorRT_test/: cookbookHelper.cuh  main.cpp  model.plan
笔记/: 【手写AI】详解TensorRT的C++Python高性能部署.md
笔记/Pytorch图像分类模型转ONNX/: 【A】安装配置环境.ipynb  【B1】Pytorch图像分类模型转ONNX-ImageNet1000类.ipynb
